# emoji-hero

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md
.runtime/: session_id
backend/: .env.example  otel-collector-plano.yaml  plano_config.yaml  pyproject.toml
backend/app/: agent.py  analytics.py  config.py  image_processing.py  main.py  search.py
docs/: plano-integration.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  posthog.ts
